practica-casa-16-julio

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
     <title>Spread operator</title>
   </head>
   <body>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus illo delectus! Earum cupiditate rem nulla veniam pariatur assumenda provident minima, sed ullam exercitationem! Vero ipsa dolore inventore! Iure, fugiat?</p>
+
+    <p class="text">Lorem</p>
+
+    <p class="text">Lorem</p>
+
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus illo delectus! Earum cupiditate rem nulla veniam pariatur assumenda provident minima, sed ullam exercitationem! Vero ipsa dolore inventore! Iure, fugiat?</p>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
